--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  google_map_polyline_new: ^0.3.0+2
+  google_maps_flutter: ^2.2.8
+  location: ^4.4.0
   curved_navigation_bar: ^1.0.3 #latest version
   flutter:
     sdk: flutter
@@ -88,6 +91,7 @@ flutter:
     - assets/icons/homeb.png
     - assets/icons/settingb.png
     - assets/icons/notification.png
+    - assets/icons/filter.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
