--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ flutter:
     - assets/icons/filter.png
     - assets/icons/notificationIcon.png
     - assets/icons/Polygon 1.png
+    - assets/icons/vehicle.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
